--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <header class="header">
         <div class="header-slider">
             <div class="header-slider-top">
-                <img src="/images/logo2.svg" class="header-logo" alt="logo">
+                <img src="./images/logo2.svg" class="header-logo" alt="logo">
                 <div class="header-menu"></div>
             </div>
 
             <div class="swiper-container main-slider loading">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
-                    <figure class="slide-bgimg" style="background-image:url(/images/vlady_main.jpg)">
+                    <figure class="slide-bgimg" style="background-image:url(./images/vlady_main.jpg)">
                         <img src="https://drive.google.com/uc?export=view&id=0B_koKn2rKOkLbVhsNzdIYmlfN1E" class="entity-img" />
                     </figure>
                     <div class="content">
@@ -29,7 +29,7 @@
                     </div>
                   </div>
                   <div class="swiper-slide">
-                    <figure class="slide-bgimg" style="background-image:url(/images/vlady_main.jpg)">
+                    <figure class="slide-bgimg" style="background-image:url(./images/vlady_main.jpg)">
                       <img src="https://drive.google.com/uc?export=view&id=0B_koKn2rKOkLbVhsNzdIYmlfN1E" class="entity-img" />
                     </figure>
                     <div class="content">
@@ -72,11 +72,11 @@
                     <h2 class="about-logo-title">Логотип</h2>
                     <div class="about-logo-description">У компании уже был логотип - главный элемент визуального стиля бренда. Задачей было продолжить концепцию эстетичного минимализма в дизайне сайта.</div>
                 </div>
-                <img src="/images/logo.svg" class="about-logo-img">
+                <img src="./images/logo.svg" class="about-logo-img">
             </div>
         </div>
         <div class="laptop">
-            <img src="/images/vlady_video.gif" alt="gif" class="gif">
+            <img src="./images/vlady_video.gif" alt="gif" class="gif">
         </div>
         <div class="homepage">
             <div class="container container_flex-dir">
@@ -87,22 +87,22 @@
             </div>
         </div>
         <div class="iMac">
-            <img src="/images/vlady_mockup1.jpg" alt="iMac" class="iMac-img">
+            <img src="./images/vlady_mockup1.jpg" alt="iMac" class="iMac-img">
         </div>
         <div class="iPad">
             <div class="container">
-                <img src="/images/vlady_ipad.jpg" alt="iPad" class="iPad-img">
+                <img src="./images/vlady_ipad.jpg" alt="iPad" class="iPad-img">
             </div>
         </div>
         <div class="iPad-project">
-            <img src="/images/vlady_mockup2.jpg" alt="iPad-project" class="iPad-project-img">
-            <img src="/images/vlady_list.png" class="iPad-project-sheets">
+            <img src="./images/vlady_mockup2.jpg" alt="iPad-project" class="iPad-project-img">
+            <img src="./images/vlady_list.png" class="iPad-project-sheets">
         </div>
         <div class="design-description">
             <div class="container container_flex_center">
                 <div class="design-description-content">
                     <p class="description-text">Ещё одним этапом была разработка адаптивного дизайна под большинство устройств. Также мы отдельно проработали подход к анимациям под телефоны и планшетны. Всё для достижения максимально вау-эффекта с какого места бы не зашёл пользователь.</p>
-                    <img src="/images/vlady_mockup3.png" class="design-description-img">
+                    <img src="./images/vlady_mockup3.png" class="design-description-img">
                 </div>
             </div>
         </div>
@@ -114,7 +114,7 @@
             <div class="swiper-container main-slider loading">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
-                    <figure class="slide-bgimg" style="background-image:url(/images/vlady_mockup4.jpg)">
+                    <figure class="slide-bgimg" style="background-image:url(./images/vlady_mockup4.jpg)">
                         <img src="https://drive.google.com/uc?export=view&id=0B_koKn2rKOkLbVhsNzdIYmlfN1E" class="entity-img" />
                     </figure>
                     <div class="content">
@@ -123,7 +123,7 @@
                     </div>
                   </div>
                   <div class="swiper-slide">
-                    <figure class="slide-bgimg" style="background-image:url(/images/vlady_mockup4.jpg)">
+                    <figure class="slide-bgimg" style="background-image:url(./images/vlady_mockup4.jpg)">
                       <img src="https://drive.google.com/uc?export=view&id=0B_koKn2rKOkLbVhsNzdIYmlfN1E" class="entity-img" />
                     </figure>
                     <div class="content">
